# commandGame

./: README.md
develop/: CMakeLists.txt  do_build_linux.sh
develop/src/: main.cpp
develop/src/Battle/: battle.cpp
develop/src/Status/: individual.cpp  individual.h  species.cpp  speciesStatusTable.h  status.cpp
develop/src/StreamText/: streamText.cpp  streamText.h
develop/src/lib_status/: status.cpp
develop/src/lib_status/header/: species.h  status.h
develop/src/libbattle/: battle.cpp  battle.h
develop/src/libstatus/: CMakeLists.txt  individual.cpp  individual.h  species.h  speciesStatusTable.h  status.cpp  status.h
document/: README.md
document/cmake/: cmake_document.md
document/git/: git_command.md
document/memo/: text_libbattle.md
document/shell_script/: linux_command.md
